# neovim-cc

./: .clangd  .gitmodules  CMakeLists.txt  README.md  gen_api.py
bindings/: generator.py
bindings/templates/: nvim.h
include/: nvim.h  nvim_rpc.h  nvim_rpc.hpp  renderer.h  socket.h  socket.hpp  type.h
src/: CMakeLists.txt  socket.cc  socket.cpp
templates/: nvim.h  nvim.hpp
test/: CMakeLists.txt  main.cc  nvim_ui.cc  socket.cc  test.cc
